-- Noteworthy changes in version 1.1.0 (????-??-??)
o) options::pidfile and options::scanlog can now be relative pathnames


-- Noteworthy changes in version 1.1.0beta1 (2015-07-02)
o) Added HTTPS support for SSL/TLS-enabled HTTP proxies which seem to be
   used quite a lot on IRC nowadays. LibreSSL or OpenSSL 0.9.8o and above
   is required for this to work.
o) Added new HTTPS and HTTPSPOST protocol configuration directives to the
   scanner {} block.


-- Noteworthy changes in version 1.0.8 (2015-06-25)
o) Added options::reconnectinterval configuration option. See doc/reference.conf
   for more information.
o) Added options::dns_timeout configuration option. See doc/reference.conf
   for more information.
o) Further modernizations and cleanups to the build system
o) HOPM now compiles with -fstack-protector-strong and -fstack-protector,
   respectively, depending on what the compiler supports
o) Added --enable-assert switch to ./configure. assert() statements are now
   disabled by default and can be enabled with ./configure --enable-assert
o) Added --enable-warnings switch to ./configure, which enables various
   compiler warnings if supported by the compiler


-- Noteworthy changes in version 1.0.7 (2015-06-06)
o) HOPM can now detect Dreamboxes with default root passwords
o) Fixed bug where the configuration parser would report syntax errors
   with invalid line numbers when there are multi-line C-style
   comments in the config file
o) Minor code cleanups


-- Noteworthy changes in version 1.0.6 (2015-05-27)
o) HOPM now catches MikroTik HttpProxies


-- Noteworthy changes in version 1.0.5 (2015-05-04)
o) Fixed bug where HOPM couldn't connect to the server specified
   in the irc {} block on some OS


-- Noteworthy changes in version 1.0.4 (2015-03-17)
o) Log timestamp format is ISO8601 now
o) Added 'protocols' command which dumps a list of configured scanners
   and their associated protocols/ports to a channel
o) Code cleanups and performance improvements

